<resources>
    <string name="app_name">WeddingPlanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Hamburger menu-->
    <string name="menu_invite">Invite</string>

    <string name="menu_home">Home</string>
    <string name="menu_form">Wedding Details</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Home Fragment-->
    <string name="card_subheader">Guest responses:</string>
    <string name="card_header">Here is some important information about your wedding</string>
    <string name="home_header">Your special day is coming. Here is some important shit for ya</string>
    <string name="home_status_yes">Yes</string>
    <string name="home_status_no">No</string>
    <string name="home_status_maybe">Maybe</string>

    <!--Login fragment -->
    <string name="unsuccessful_signin">Please check your email or password carefully</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="signin_button">Sign in</string>
    <string name="create_account_bt">Create account</string>

    <!-- Create Account Fragment -->
    <string name="create_fail_credentials">Please check your account information</string>
    <string name="create_fail_network">Sorry we were not able to register your account</string>
    <string name="create_success">Registered successfully</string>
    <string name="create_name_hint">Name</string>
    <string name="create_email_hint">Email</string>
    <string name="create_password_hint">Password</string>
    <string name="create_confirm_pass">Confirm Password</string>
    <string name="create_register_button">Register</string>
    <string name="create_already_have_account">Already have an account?</string>
    <string name="create_sign_in_button">Sign In</string>


    <!--Forgot Password -->
    <string name="forgot_header_text">Please enter the email associated with your account.</string>
    <string name="forgot_send_email_bt">Reset Password</string>


    <!-- InviteGuests Fragment-->
    <string name="inv_header_text">Send an invitation to your special day here</string>
    <string name="invite_hint">Type the email of the invitee</string>

    <!-- Wedding Detail Form -->
    <string name="brides_name_hint">Bride\'s name</string>
    <string name="grooms_name_hint">Groom\'s name</string>
    <string name="wed_detail__header">Please provide as much information as you can so we can help you plan your special day</string>
    <string name="wedding_form_next">Next</string>
</resources>
