<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:background="@drawable/gradient_background"
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textAlignment="center"
        style="@style/header_text"
        android:text="@string/home_header"
        android:id="@+id/header_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="6dp"
        app:cardCornerRadius="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHeight_percent=".6"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/header_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_header"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/view4"
                app:layout_constraintEnd_toStartOf="@+id/guideline18"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/divder_color"
                app:layout_constraintBottom_toTopOf="@+id/sub_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/sub_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_subheader"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/no_tv"
                app:layout_constraintEnd_toStartOf="@+id/guideline18"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/yes_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_status_yes"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/no_tv"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/no_tv"
                app:layout_constraintWidth_percent=".3"
                tools:text="Yes" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/yes_tv"
                app:layout_constraintStart_toStartOf="@+id/yes_tv"
                app:layout_constraintTop_toBottomOf="@+id/yes_tv">

                <TextView
                    android:id="@+id/yes_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/no_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_status_no"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/email_tv"
                app:layout_constraintEnd_toStartOf="@+id/maybe_tv"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/yes_tv"
                app:layout_constraintTop_toBottomOf="@+id/sub_header"
                app:layout_constraintWidth_percent=".3"
                tools:text="No" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/no_tv"
                app:layout_constraintStart_toStartOf="@+id/no_tv"
                app:layout_constraintTop_toBottomOf="@+id/no_tv">

                <TextView
                    android:id="@+id/no_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/maybe_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_status_maybe"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/no_tv"
                app:layout_constraintTop_toTopOf="@+id/no_tv"
                app:layout_constraintWidth_percent=".3"
                tools:text="Maybe" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/maybe_tv"
                app:layout_constraintStart_toStartOf="@+id/maybe_tv"
                app:layout_constraintTop_toBottomOf="@+id/maybe_tv">

                <TextView
                    android:id="@+id/maybe_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="24"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:singleLine="true"
                android:text="Send more invites?"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/send_bt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/no_tv"
                tools:text="Send more invites" />

            <ImageButton
                android:id="@+id/send_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_menu_send"
                android:text="Test Button"
                app:layout_constraintBottom_toBottomOf="@+id/email_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/email_tv"
                app:layout_constraintTop_toTopOf="@+id/email_tv"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>